@@ -506,6 +506,18 @@ class WorldpayTest < Test::Unit::TestCase
     assert_failure response
   end
 
+  def test_3ds_name_coersion
+    @options[:execute_threed] = true
+    response = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      if /<submit>/ =~ data
+        assert_match %r{<cardHolderName>3D</cardHolderName>}, data
+      end
+    end.respond_with(successful_authorize_response, successful_capture_response)
+    assert_success response
+  end
+
   def test_transcript_scrubbing
     assert_equal scrubbed_transcript, @gateway.scrub(transcript)
   end
